Removed html font tag and added CSS color for H1 tag.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>System Disk Status</title>
 </head>
 <body>
-<center><h1><font color="#000080">System Disk Status</font></h1></center>
+<center><h1>System Disk Status</h1></center>
     <table>
         <thead bgcolor="#0096FF">
             <th>System</th>
@@ -53,6 +53,9 @@
     }
     table {
         width: 100%;
+    }
+    h1 {
+        color: #000080;
     }
 #    tr:nth-child(even)
 #    {
